styles.css
@import url(https://fonts.googleapis.com/css?family=Noto+Sans:100,200,300,400,500,600,700);
@import url(https://fonts.googleapis.com/css?family=Noto+Serif);

body {
	color: #212121;
	font-family: 'Noto Serif', serif;
	font-size: 16px;
	text-rendering: optimizeLegibility;
}

a:hover,
li:hover,
.nav-bar-component li:hover,
.nav-bar-component :hover .title {
	text-decoration: none !important;
}

p a,
.layout-component .layout-text-component p a,
.layout-component .layout-text-component li a,
.layout-component .layout-html-component p a,
.layout-component .layout-html-component li a {
	border-bottom: 1px dotted currentColor;
	padding-bottom: 2px;
	text-decoration: none;
}

p a:hover,
p a:visited,
.layout-component .layout-text-component p a:hover,
.layout-component .layout-text-component p a:visited,
.layout-component .layout-text-component li a:hover,
.layout-component .layout-text-component li a:visited,
.layout-component .layout-html-component p a:hover,
.layout-component .layout-html-component p a:visited,
.layout-component .layout-html-component li a:hover,
.layout-component .layout-html-component li a:visited {
	border-bottom-color: #087acc;
	color: #087acc;
}

p,
.layout-component .layout-text-component p,
.layout-component .layout-text-component li,
.layout-component .layout-html-component p,
.layout-component .layout-html-component li {
	font-size: 1rem;
	line-height: 1.5;
}

p,
.layout-component .layout-text-component p,
.layout-component .layout-html-component p {
    margin-bottom: 1.5rem;
}

ul, ol,
.layout-component .layout-text-component ul,
.layout-component .layout-html-component ul,
.layout-component .layout-text-component ol,
.layout-component .layout-html-component ol {
    margin: 0 0 1.5rem;
    padding-left: 1.25rem;
}

li,
li > p,
.layout-component .layout-text-component li,
.layout-component .layout-text-component li > p,
.layout-component .layout-html-component li,
.layout-component .layout-html-component li > p {
    margin-bottom: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
}

h1,
.layout-component .block-content h1 {
	font-size: calc((36 / 16) * 1rem);
}

@media screen and (min-width: 45.625em) {
	h1,
	.layout-component .block-content h1 {
		font-size: calc((41 / 16) * 1rem);
	}
}

@media screen and (min-width: 56.25em) {
	h1,
	.layout-component .block-content h1 {
		font-size: calc((46 / 16) * 1rem);
	}
}

h2,
.layout-component .block-content h2 {
	font-size: calc((26 / 16) * 1rem);
}

h3,
.layout-component .block-content h3 {
	font-size: calc((22 / 16) * 1rem);
}

h4,
.layout-component .block-content h4 {
	font-size: calc((20 / 16) * 1rem);
}

h5,
.layout-component .block-content h5 {
	font-size: calc((18 / 16) * 1rem);
}

h6,
.layout-component .block-content h6 {
	font-size: 1rem;
}

header.header-component {
	display: none;
}
.nav-bar-component,
.footer-component {
	font-family: 'Noto Sans', Arial, Helvetica, sans-serif;
	font-size: 0.875rem;
	text-transform: none;
	height: 100%;
}
.nav-bar-component {
	margin-top: calc((54 / 16) * 1rem);
	margin-bottom: calc((42 / 16) * 1rem);
}
.nav-bar-component.accent-color {
	border-bottom: 0 !important;
}
.nav-bar-component .scrollable-nav {
	overflow: unset;
}
.nav-bar-component .scrollable-nav .overflow-gradient {
	background: none;
	border-bottom: 0;
	top: 40px;
	left: 165px;
	width: 98%;
	height: auto;
}
.nav-bar-component .container {
	padding-left: 0;
	padding-right: 0;
	width: 98%;
}
.nav-bar-component .container .col-12 {
	width: 100%;
	margin-right: 0;
}
.nav-bar-component a {
	height: 100%;
	margin: 0;
	padding-left: 0;
	padding-right: 0.75rem;
}
.nav-bar-component li a {
	text-transform: none;
	margin: 0;
	margin-left: calc((18 / 16) * 1rem);
	font-size: 0.875rem;
	font-weight: 600;
	line-height: 24px;
}
.nav-bar-component li a:hover {
	color: #087acc;
}
.nav-bar-component li a .bp3-icon-share {
	display: none;
}
.nav-bar-component ul.nav-list {
	height: 30px;
	align-items: center;
}
.nav-bar-component ul.nav-list > :first-child {
	padding-top: 0;
	padding-left: calc((21 / 16) * 1rem);
	border-right: 1px #e0e0e0 solid;
}
.nav-bar-component ul.nav-list > :nth-child(2) a {
	display: flex;
}
.nav-bar-component ul.nav-list > :nth-child(2) a:before {
	background-image: url('https://ui-patterns.elifesciences.org/assets/img/patterns/molecules/nav-primary-menu-ic.svg');
	background-size: 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
}
.nav-bar-component ul.nav-list > :nth-child(2) li {
	display: none;
}
.nav-bar-component ul.nav-list > :nth-child(7),
.nav-bar-component ul.nav-list > :nth-child(8),
.nav-bar-component ul.nav-list > :nth-child(9) {
	align-items: center;
}
.nav-bar-component ul.nav-list > :nth-child(7) {
	margin-left: auto;
}

.nav-bar-component ul.nav-list > :nth-child(7) a,
.nav-bar-component ul.nav-list > :nth-child(8) a {
	display: flex;
}

.nav-bar-component ul.nav-list > :nth-child(7) a:after {
	background-image: url('https://ui-patterns.elifesciences.org/assets/img/patterns/molecules/nav-secondary-search-black-ic.svg');
	background-size: 24px 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
	margin-left: calc((4 / 16) * 1rem);
}
.nav-bar-component ul.nav-list > :nth-child(8) a:after {
	background-image: url('https://elifesciences.org/assets/patterns/img/patterns/molecules/nav-secondary-alert-black-ic.e9bb80fe.svg');
	background-size: 24px;
	display: inline-block;
	width: 24px;
	height: 24px;
	content: '';
	margin-left: calc((4 / 16) * 1rem);
}

.nav-bar-component ul.nav-list > :last-child a:hover {
	color: white;
	background-color: #0769b0;
}
/* ... */

